@@ -4,10 +4,9 @@ import java.util.List;
 
 class G0_Adder {
 	
-	@SuppressWarnings({ "rawtypes", "deprecation", "unchecked" })
 	public void add(List list) {
-		list.add(new Integer(50));
-		list.add(new Boolean(true));
+		list.add(Integer.valueOf(10));
+		list.add(Boolean.TRUE);
 	}
 	
 }
